feat : panel 검색 창에 포함된 알고리즘 렌더링